# CPP_Exercises

./: CMakeLists.txt  TP10.md
TP1/: CMakeLists.txt  helloworld.cpp
src/: ArrayNode.cpp  ArrayNode.hpp  Board.hpp  Card.hpp  IntLeaf.cpp  IntLeaf.hpp  Kid.hpp  Kitchen.cpp  Kitchen.hpp  Leaf.hpp  Monster.hpp  Node.cpp  Node.hpp  ObjectNode.cpp  ObjectNode.hpp  Plush.hpp  PlushStore.hpp  Pokeball.cpp  Pokeball.h  Pokedex.h  Pokemon.cpp  Pokemon.h  Spell.hpp  StringLeaf.cpp  StringLeaf.hpp  TP9_Consolidation_my_answer.md  Trap.hpp  ex1.cpp  ex1.hpp  ex3.hpp  image.hpp  pixels.hpp  test14-move2.md  translator.cpp  translator_alt.cpp
tests/: test12-object-insert.cpp
tests/ex1/: test14-move2.md
