# Ceci est un commentaire.
# Retirez le # pour que l'instruction soit prise en compte.

# La commande ci-dessous permet de générer un exécutable à partir des fichiers spécifiés.
# add_executable(
#     mon_executable
#     f1.cpp
#     f2.cpp
#     f3.cpp
# )

add_executable(
    hello-world.exe # Pour Windows l'executable est un .exe donc il faut l'ajouter 
    helloworld.cpp 
)